<resources>
    <string name="app_name">PlannerApp</string>
    <string name="task_title_hint">Enter a title for the task.</string>
    <string name="task_title_label">Task Title</string>
    <string name="task_details_label">Task Details</string>
    <string name="task_detail_notes">Enter Additional Task Details</string>
    <string name="due_date_label">Due Date and Time</string>
    <string name="task_completed_label">Task Completed</string>
    <string name="priority_task_label">Priority Task</string>
    <string name="daily_challenge_label">Daily Photo Challege</string>
    <string name="daily_challenge_instructions">Take A Photo of Something that Makes You Happy</string>
    <string name="motivation_quote">"Because the ones who are crazy enough to think that they can change the world are the ones who do"    - Steve Jobs</string>
    <string name="new_task">New Task</string>
    <string name="task_suspect_text">Choose Suspect</string>
    <string name="task_report_text">Send Task Report</string>
    <string name="task_report">%1$s!
        The task was discovered on %2$s. %3$s, and %4$s
    </string>
    <string name="task_report_solved">The case is solved</string>
    <string name="task_report_unsolved">The case is not solved</string>
    <string name="task_report_no_suspect">there is no suspect.</string>
    <string name="task_report_suspect">the suspect is %s.</string>
    <string name="task_report_subject">PlannerApp Task Report</string>
    <string name="send_report">Send task report via</string>
    <string name="contact_police">CONTACT POLICE</string>
</resources>